# VulkanRender

./: CMakeLists.txt  compile.bat  compile_flags.txt
resources/shaders/: shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
src/: Atlas.cpp  Atlas.hpp  Buffer.cpp  Buffer.hpp  Camera.cpp  Camera.hpp  Descriptors.cpp  Descriptors.hpp  Device.cpp  Device.hpp  Engine.cpp  Engine.hpp  Fonts.cpp  Fonts.hpp  FrameInfo.hpp  FreeList.hpp  GlobalRenderSystem.cpp  Material.cpp  Material.hpp  Model.cpp  Model.hpp  Pipeline.cpp  Pipeline.hpp  RenderScene.cpp  RenderScene.hpp  RenderSystem.cpp  RenderSystem.hpp  Renderer.cpp  Renderer.hpp  ShaderManager.hpp  Swapchain.cpp  Swapchain.hpp  Texture.cpp  Texture.hpp  UIRenderSystem.cpp  UIRenderSystem.hpp  main.cpp
src/gui/: GUIContext.cpp  GUIContext.hpp  GUIRendering.cpp  GUIRendering.hpp
src/model/: GPUMaterial.cpp  GPUMaterial.hpp  GPUMesh.cpp  GPUMesh.hpp  GPUResources.hpp  GPUTexture.cpp  GPUTexture.hpp  Mesh.cpp  Mesh.hpp  MeshObject.cpp  MeshObject.hpp  Model.hpp  Texture.cpp  Texture.hpp
src/rendering/: GlobalRenderSystem.cpp  GlobalRenderSystem.hpp  RenderService.cpp  RenderService.hpp  RenderSystem.cpp  RenderSystem.hpp  UIRenderSystem.cpp  UIRenderSystem.hpp
src/shaders/: Shader.hpp
src/vk/: Buffer.hpp  Descriptors.cpp  Descriptors.hpp  Device.cpp  Device.hpp  FrameInfo.hpp  GPUMaterial.cpp  GPUMaterial.hpp  GPUMesh.hpp  GPUTexture.hpp  Pipeline.cpp  Pipeline.hpp  Renderer.hpp  Swapchain.cpp
src/window/: Events.cpp  Events.hpp  Window.cpp  Window.hpp
